Mon Sep 18 14:44:04 1995  Arne H. Juul  <arnej@pvv.unit.no>

	* configure.in (mips-dec-netbsd*): New target.
	* configure: Rebuild.

Sun Sep 17 22:17:43 1995  Ian Lance Taylor  <ian@cygnus.com>

	* configure.in: Set endian to little for mips-*-ultrix*.
	* configure: Rebuild.

Fri Sep 15 13:16:55 1995  Ian Lance Taylor  <ian@cygnus.com>

	* expr.c (current_location): New static function.  Handle magic
	symbol `.'; in absolute section, return a constant.
	(operand): Call current_location for '.' and '$', instead of doing
	it inline.  In MRI mode, call current_location for '*'.

Fri Sep 15 21:39:29 1995  Jeff Law  (law@snake.cs.utah.edu)

	* config/tc-m68k.c: Change some "CONST" references to "const".

Fri Sep 15 17:27:41 1995  Ken Raeburn  <raeburn@cygnus.com>

	Tue Sep 12 17:08:23 1995  Pat Rankin  <rankin@eql.caltech.edu>

	* config/obj-vms.c (VMS_stab_parse): simplify first loop;
	use S_GET_NAME/modify/S_SET_NAME sequence instead of abusing
	S_GET_NAME when updating symbol name.
	(local_symbols_DST): first prefix/postfix typo from July 21st.
	[plus comment reformatting --kr]

Wed Sep 13 12:33:03 1995  Ian Lance Taylor  <ian@cygnus.com>

	* Makefile.in (EXPECT): New variable.
	(CHECKFLAGS): Remove.
	(site.exp): New target.
	(check): Rewrite to invoke runtest directly, rather than recurring
	down into testsuite.
	(clean-here): Remove testsuite directory.
	(clean, distclean): Don't recur into testsuite.
	* configure.in: Don't call AC_CONFIG_SUBDIRS(testsuite).
	* configure: Rebuild.

	* write.c (relax_and_size_seg): Change to the segment we are
	relaxing, in case md_convert_frag, called by cvt_frag_to_fill,
	wants to call fix_new.
	* config/tc-m68k.c (m68k_ip): Permit PC relative code if the
	segment of the symbol is the current segment, not just in
	text_section.
	(md_convert_frag_1): Don't call subseg_change.
	(md_estimate_size_before_relax): Likewise.

Tue Sep 12 10:36:40 1995  Doug Evans  <dje@canuck.cygnus.com>
